--- a/projects/huangpu/assignment-3/Calendar/pom.xml
+++ b/projects/huangpu/assignment-3/Calendar/pom.xml
@@ -53,7 +53,17 @@
 <plugin>
     <groupId>org.pitest</groupId>
     <artifactId>pitest-maven</artifactId>
-    <version>1.1.10</version>
+    <version>1.2.0</version>
+    
+    <configuration>
+	  <avoidCallsTo>
+	    <!--
+A List of packages, classes and methods which are to be considered outside the scope of mutation.
+	    -->
+	    <avoidCallsTo>java.io.PrintStream</avoidCallsTo>
+	  </avoidCallsTo>
+	</configuration>
+    
  </plugin>
 
 </plugins>
